Fixed spacing on smaller devices

--- a/PantryPal/ListItem.css
+++ b/PantryPal/ListItem.css
@@ -30,7 +30,7 @@ input[type="checkbox"] {
 	width: 20px;
 	background: #fff;
 	border: 2px #ddd solid;
-	margin: 2em 1px 0 1em;
+	margin: 2em 0 0 1em;
 }
   
 .checkbox--active {
@@ -44,9 +44,10 @@ input[type="checkbox"] {
 
 #listItem .middle {
 	display: block;
+	max-width: 46%;
 	float: left;
-	padding-left: 2em;
-	padding-top: 0.25em;
+	padding-left: 1em;
+	padding-top: 0.55em;
 }
 
 #listItem .right {
@@ -55,11 +56,16 @@ input[type="checkbox"] {
 }
 
 #listItem .title {
-	font-size: 1.75em;
+	/*max-width: 7.5em;*/
+
+	font-size: 1.25em;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 #listItem .tagContainer {
-	font-size: 0.9em;
+	font-size: 0.8em;
 	padding-top: 0.35em;
 }
 
@@ -81,8 +87,10 @@ input[type="checkbox"] {
 #listItem .quantity {
 	float: right;
 	font-size: 1.5em;
-	padding-right: 1.5em;
-	padding-top: 0.5em;
+	margin-right: 0.5em;
+	padding: 0.5em 0.5em 0.85em 0.5em;
+	/*padding-right: 0.5em;
+	padding-top: 0.5em;*/
 }
 
 #listItem .remove {
